Changes in Http 1.2: response setContent overlaod with string as param. HttpResponse content can be get as strin or byte array now. Added method that makes sure Content-Type header has specified charset Added getAttribute method in httpSession. Changes in javache api 1.2.2: Added method writeData that received string. Changes in solet 1.1:  HttpSoletResponse has sendRedirect method.  BaseHttpSolet has createRoute method that uses the current app name (the .jar file name in webapps) as a prefix.  Changes in broccolina:  broccolina now passes the app name to the selected solet. (app2.jar will be "/app2" and ROOT.jar which is the main app will be "")